# whipper-zipper

./: .gitignore  LICENSE  Makefile  README.md  gui.py  gui_canvas.py  gui_growing_text_widgets.py  gui_notebook.py  gui_pane_resize.py  gui_vertical_notebook.py  spreadsheet.py  tk-grid.py
c/: CMakeLists.txt  MyApp.c  build.cmd
c/src/: app.c
